make sure to fix image on mobile as well #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1233,7 +1233,7 @@ footer {
 		padding: 15px;
 	}
 
-	.kg-image-card.kg-width-wide {
+	.kg-image-card.kg-width-wide, .kg-image-card.kg-width-full {
 		margin-left: 0;
 		margin-right: 0;
 	}
